# learnopengl

./: .gitignore  CMakeLists.txt  Makefile  README.md  glad.cpp  main.cpp  new_tutorial.py
include/: Animation.h  mesh.h  model.h  shader.h
include/breakout/: BallObject.h  Game.h  GameLevel.h  GameObject.h  Shader.h  SpriteRenderer.h
include/glad/: glad.h
include/learnopengl/: Animator.h  assimp_glm_helpers.h  bone.h  camera.h  mesh.h  model.h  shader.h
include/refresher/: shader.h
learnopengl/learnopengl/: main.cpp
learnopengl/learnopengl.xcodeproj/: project.pbxproj
learnopengl/learnopengl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
learnopengl/learnopengl.xcodeproj/project.xcworkspace/xcuserdata/jack.xcuserdatad/: UserInterfaceState.xcuserstate
src/: basic_lighting.cpp  basic_lighting_ex3.cpp  camera.cpp  camera_ex1.cpp  coord_sys.cpp  ebo.cpp  ebo.hpp  getting_started.cpp  getting_started_ex2.cpp  getting_started_ex3.cpp  lighting.cpp  main.cpp  materials.cpp  shader.h  shaders.cpp  shaders_ex1.cpp  shaders_ex2.cpp  textures.cpp  textures_ex1.cpp  textures_ex2.cpp  textures_ex4.cpp  transforms.cpp  transforms_ex2.cpp
src/1.Getting_Started/1.1.Hello_Triangle/: hello_triangle.cpp
src/1.Getting_Started/1.2.Hello_Triangle_QUAD/: hello_triangle_quad.cpp
src/1.Getting_Started/1.3.Hello_Triangle_EX1/: hello_triangle_ex1.cpp
src/1.Getting_Started/2.1.Shaders/: fragment_shader.fs  shaders.cpp
src/1.Getting_Started/2.2.Shaders_EX1/: shaders_ex1.cpp
src/1.Getting_Started/2.3.Shaders_EX2/: shaders_ex2.cpp  vertex_shader_ex2.vs
src/1.Getting_Started/3.1.Textures/: textures.cpp
src/1.Getting_Started/3.2.Textures_EX1/: textures_ex1.cpp
src/1.Getting_Started/3.3.Textures_EX2/: textures_ex2.cpp
src/1.Getting_Started/3.4.Textures_EX4/: textures_ex4.cpp  vertex_shader_texture_ex4.vs
src/1.Getting_Started/4.1.Transformations/: transforms.cpp
src/1.Getting_Started/4.2.Transformations_EX2/: transforms_ex2.cpp
src/1.Getting_Started/5.1.Coordinate_Systems/: coordinate_systems.cpp
src/1.Getting_Started/6.1.Camera/: camera.cpp
src/1.Getting_Started/6.2.Camera_EX1/: camera_ex1.cpp  fragment_shader_camera.fs
src/2.Lighting/1.1.Colors/: colors.cpp
src/2.Lighting/2.1.Basic_Lighting/: basic_lighting.cpp
src/2.Lighting/2.2.Basic_Lighting_EX3/: basic_lighting_ex3.cpp
src/2.Lighting/3.1.Materials/: materials.cpp
src/2.Lighting/4.1.Lighting_Maps/: fragment_shader_lighting_maps.fs  lighting_maps.cpp
src/2.Lighting/5.1.Light_Casters/: light_casters.cpp
src/2.Lighting/6.1.Multiple_Lights/: multiple_lights.cpp  vertex_shader_multiple_lights.vs
src/3.Model_Loading/1.1.Model/: model.cpp
src/3.Model_Loading/2.1.Skeletal_Animation/: skeletal_animation.cpp  vertex_shader_skeletal_animation.vs
src/4.Advanced_OpenGL/1.1.Depth_Testing/: Depth_Testing.cpp
src/4.Advanced_OpenGL/2.1.Stencil_Testing/: Stencil_Testing.cpp
src/4.Advanced_OpenGL/3.1.Blending/: 3.1.Blending.fs  Blending.cpp
src/4.Advanced_OpenGL/4.1.Face_Culling/: face_culling.cpp
src/4.Advanced_OpenGL/5.1.Framebuffer/: 5.1.Framebuffer_default.fs  Framebuffer.cpp
src/4.Advanced_OpenGL/5.1.Framebuffer_EX1/: 5.1.Framebuffer_default.fs  Framebuffer_EX1.cpp
src/7.In_Practice/Breakout/: BallObject.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  Texture.cpp  breakout.cpp
src/Basic_Lighting_EX3/: basic_lighting_ex3.cpp
src/Camera_EX1/: camera_ex1.cpp
src/Hello_Triangle/: hello_triangle.cpp
src/Light_Casters/: fragment_shader_light_casters.fs  light_casters.cpp
src/Model/: model.cpp
src/Multiple_Lights/: fragment_shader_multiple_lights.fs
src/Textures/: textures.cpp
src/Textures_EX1/: fragment_shader_texture_ex1.fs  textures_ex1.cpp
src/Transformations_EX2/: fragment_shader_transform.fs  transforms_ex2.cpp
src/shader_vault/: fragment_shader_basic_lighting.fs  vertex_shader_basic_lighting_ex3.vs  vertex_shader_ex1.vs
src/shaders/: fragment_shader_basic_lighting_ex3.fs  fragment_shader_materials.fs  fragment_shader_texture.fs  refresher_fragment_shader.fs  refresher_vertex_shader.vs  vertex_shader.vs  vertex_shader_transform.vs
